--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Mail==0.9.1
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.9.5
 Mako==1.0.6
