--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.8.10
 blinker==1.4
 click==6.7
 Flask==0.12
+Flask-Excel==0.0.5
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
@@ -12,8 +13,15 @@ Jinja2==2.9.5
 Mako==1.0.6
 MarkupSafe==0.23
 psycopg2==2.6.2
+pyexcel==0.4.4
+pyexcel-io==0.3.2
+pyexcel-webio==0.0.10
+pyexcel-xls==0.3.1
 python-editor==1.0.3
 requests==2.13.0
 sparkpost==1.3.4
 SQLAlchemy==1.1.5
+texttable==0.8.7
 Werkzeug==0.11.15
+xlrd==1.0.0
+xlwt==1.2.0
